@@ -69,6 +69,8 @@ void count_missing (void);
 
 void do_add_markers (GtkWidget *widget, dialog_t *ddata);
 
+int maybe_restore_full_data (int action);
+
 /* model-related functions */
 
 void do_coint (GtkWidget *widget, gpointer p);
